[gd_scene load_steps=6 format=3 uid="uid://iecyipog4mxn"]

[ext_resource type="PackedScene" uid="uid://bfr1e5p414f76" path="res://player_ship/player_ship.tscn" id="1_47gyb"]
[ext_resource type="Script" path="res://world/world.gd" id="1_yhb16"]
[ext_resource type="PackedScene" uid="uid://6ese1ateab5u" path="res://enemies/square_enemy.tscn" id="2_gi65c"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hflo7"]
size = Vector3(1, 1, 10)

[sub_resource type="LabelSettings" id="LabelSettings_7ga2q"]
font_size = 48

[node name="World" type="Node3D"]
script = ExtResource("1_yhb16")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="PlayerShip" parent="." instance=ExtResource("1_47gyb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.193948, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 13.0618, -8.26086)

[node name="SquareEnemy" parent="." instance=ExtResource("2_gi65c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12)

[node name="PlayerBounds" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerBounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0, 0)
shape = SubResource("BoxShape3D_hflo7")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PlayerBounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 0)
shape = SubResource("BoxShape3D_hflo7")

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_7ga2q")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
